<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#64C84B"
    android:orientation="vertical"
    tools:context=".SelectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/select_common_name_label"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/select_scientific_name_label"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/select_code_label"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/select_recyler_birds"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/select_button_map"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/transparent"
        android:drawableTop="@drawable/bird_finder_globe_icon"
        android:onClick="GoToMap"
        android:text="@string/button_label_map" />

</LinearLayout>