<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="#64C84B"
    android:orientation="vertical"
    tools:context=".MapsActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_textView_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            android:text="@string/textView_range"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/main_seekBar_range"
            style="@android:style/Widget.DeviceDefault.Light.SeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="3"
            android:max="50"
            android:progress="25"
            android:progressTint="@color/design_default_color_on_secondary"
            android:thumb="@drawable/bird_finder_seeker_bar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_button_mode"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/bird_finder_map_mode_icon"
            android:onClick="toggleMapMode"
            android:text="@string/button_label_mode"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/main_button_search"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:backgroundTint="@android:color/transparent"
            android:drawableTop="@drawable/bird_finder_search_icon"
            android:onClick="GoToSelectActivity"
            android:text="@string/button_label_search"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/main_imageButton_zoom_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/zoom_button"
                android:onClick="zoomIn"
                android:padding="20dp"
                android:src="@drawable/bird_finder_zoom_in_icon" />

            <ImageButton
                android:id="@+id/main_imageButton_zoom_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/zoom_out_button"
                android:onClick="zoomOut"
                android:padding="20dp"
                android:src="@drawable/bird_finder_zoom_out_icon" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>